add perdictions file, to load the models

--- a/03_results.ipynb
+++ b/03_results.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
     "fig.update_layout(\n",
     "    title='RMSE by Instance Family and Years Used for Prediction',\n",
     "    xaxis_title='Years Used for Prediction',\n",
-    "    yaxis_title='RMSE',\n",
+    "    yaxis_title='RMSE', template='presentation',\n",
     "    legend=dict(orientation='h', yanchor='bottom',\n",
     "                y=1, xanchor='left', x=0),\n",
     "    legend_title='Instance Family',\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,14 +172,14 @@
     "        x=df_instance['Years used to predict'],\n",
     "        y=df_instance['validation_MAE'],\n",
     "        mode='lines+markers',\n",
-    "        name=instance_family\n",
+    "        name=instance_family,\n",
     "    ))\n",
     "\n",
     "# Customize the layout\n",
     "fig.update_layout(\n",
     "    title='MAE by Instance Family and Years Used for Prediction',\n",
     "    xaxis_title='Years Used for Prediction',\n",
-    "    yaxis_title='MAE',\n",
+    "    yaxis_title='MAE', template='presentation',\n",
     "    legend=dict(orientation='h', yanchor='bottom',\n",
     "                y=1, xanchor='left', x=0),\n",
     "    legend_title='Instance Family',\n",
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
     "fig.update_layout(\n",
     "    title='MAPE by Instance Family and Years Used for Prediction',\n",
     "    xaxis_title='Years Used for Prediction',\n",
-    "    yaxis_title='MAPE',\n",
+    "    yaxis_title='MAPE', template='presentation',\n",
     "    legend=dict(orientation='h', yanchor='bottom',\n",
     "                y=1, xanchor='left', x=0),\n",
     "    legend_title='Instance Family',\n",
