tune the predictions per instance type

--- a/00_usefulPlots.ipynb
+++ b/00_usefulPlots.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,23 +51,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Memory optimized                   213171\n",
-       "Storage optimized                  131324\n",
-       "General purpose                    115748\n",
-       "Compute optimized                   84582\n",
-       "GPU instance                        24350\n",
+       "Memory_optimized                   213171\n",
+       "Storage_optimized                  131324\n",
+       "General_purpose                    115748\n",
+       "Compute_optimized                   84582\n",
+       "GPU_instance                        24350\n",
        "FPGA Instances                       1040\n",
        "Machine Learning ASIC Instances       128\n",
        "Name: instanceFamily, dtype: int64"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,14 +77,8 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +88,7 @@
        "Name: TermType, dtype: int64"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +173,7 @@
        "Name: Location, dtype: int64"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +203,7 @@
        "Name: Location, dtype: int64"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +299,7 @@
        "      <td>222AY99RA8W7WFR4.38NPMPTW36.6YS6EN2CT7</td>\n",
        "      <td>0.0605</td>\n",
        "      <td>r6gd.medium</td>\n",
-       "      <td>Memory optimized</td>\n",
+       "      <td>Memory_optimized</td>\n",
        "      <td>3</td>\n",
        "      <td>Partial Upfront</td>\n",
        "      <td>standard</td>\n",
@@ -329,7 +323,7 @@
        "      <td>222AY99RA8W7WFR4.4NA7Y494T4.6YS6EN2CT7</td>\n",
        "      <td>0.1403</td>\n",
        "      <td>r6gd.medium</td>\n",
-       "      <td>Memory optimized</td>\n",
+       "      <td>Memory_optimized</td>\n",
        "      <td>1</td>\n",
        "      <td>No Upfront</td>\n",
        "      <td>standard</td>\n",
@@ -353,7 +347,7 @@
        "      <td>222AY99RA8W7WFR4.7NE97W5U4E.6YS6EN2CT7</td>\n",
        "      <td>0.1466</td>\n",
        "      <td>r6gd.medium</td>\n",
-       "      <td>Memory optimized</td>\n",
+       "      <td>Memory_optimized</td>\n",
        "      <td>1</td>\n",
        "      <td>No Upfront</td>\n",
        "      <td>convertible</td>\n",
@@ -377,7 +371,7 @@
        "      <td>222AY99RA8W7WFR4.BPH4J8HBKS.6YS6EN2CT7</td>\n",
        "      <td>0.1231</td>\n",
        "      <td>r6gd.medium</td>\n",
-       "      <td>Memory optimized</td>\n",
+       "      <td>Memory_optimized</td>\n",
        "      <td>3</td>\n",
        "      <td>No Upfront</td>\n",
        "      <td>standard</td>\n",
@@ -401,7 +395,7 @@
        "      <td>222AY99RA8W7WFR4.CUZHX8X6JH.6YS6EN2CT7</td>\n",
        "      <td>0.0721</td>\n",
        "      <td>r6gd.medium</td>\n",
-       "      <td>Memory optimized</td>\n",
+       "      <td>Memory_optimized</td>\n",
        "      <td>1</td>\n",
        "      <td>Partial Upfront</td>\n",
        "      <td>convertible</td>\n",
@@ -449,7 +443,7 @@
        "      <td>ZZZU9HQBJNWNW7AD.BPH4J8HBKS.6YS6EN2CT7</td>\n",
        "      <td>0.1470</td>\n",
        "      <td>c5ad.xlarge</td>\n",
-       "      <td>Compute optimized</td>\n",
+       "      <td>Compute_optimized</td>\n",
        "      <td>3</td>\n",
        "      <td>No Upfront</td>\n",
        "      <td>standard</td>\n",
@@ -473,7 +467,7 @@
        "      <td>ZZZU9HQBJNWNW7AD.CUZHX8X6JH.6YS6EN2CT7</td>\n",
        "      <td>0.1340</td>\n",
        "      <td>c5ad.xlarge</td>\n",
-       "      <td>Compute optimized</td>\n",
+       "      <td>Compute_optimized</td>\n",
        "      <td>1</td>\n",
        "      <td>Partial Upfront</td>\n",
        "      <td>convertible</td>\n",
@@ -497,7 +491,7 @@
        "      <td>ZZZU9HQBJNWNW7AD.HU7G6KETJZ.6YS6EN2CT7</td>\n",
        "      <td>0.1210</td>\n",
        "      <td>c5ad.xlarge</td>\n",
-       "      <td>Compute optimized</td>\n",
+       "      <td>Compute_optimized</td>\n",
        "      <td>1</td>\n",
        "      <td>Partial Upfront</td>\n",
        "      <td>standard</td>\n",
@@ -521,7 +515,7 @@
        "      <td>ZZZU9HQBJNWNW7AD.R5XV2EPZQZ.6YS6EN2CT7</td>\n",
        "      <td>0.1080</td>\n",
        "      <td>c5ad.xlarge</td>\n",
-       "      <td>Compute optimized</td>\n",
+       "      <td>Compute_optimized</td>\n",
        "      <td>3</td>\n",
        "      <td>Partial Upfront</td>\n",
        "      <td>convertible</td>\n",
@@ -545,7 +539,7 @@
        "      <td>ZZZU9HQBJNWNW7AD.Z2E3P23VKM.6YS6EN2CT7</td>\n",
        "      <td>0.1630</td>\n",
        "      <td>c5ad.xlarge</td>\n",
-       "      <td>Compute optimized</td>\n",
+       "      <td>Compute_optimized</td>\n",
        "      <td>3</td>\n",
        "      <td>No Upfront</td>\n",
        "      <td>convertible</td>\n",
@@ -595,17 +589,17 @@
        "570342  ZZZU9HQBJNWNW7AD.Z2E3P23VKM.6YS6EN2CT7        0.1630  c5ad.xlarge   \n",
        "\n",
        "           instanceFamily  LeaseContractLength   PurchaseOption OfferingClass  \\\n",
-       "0        Memory optimized                    3  Partial Upfront      standard   \n",
-       "1        Memory optimized                    1       No Upfront      standard   \n",
-       "2        Memory optimized                    1       No Upfront   convertible   \n",
-       "3        Memory optimized                    3       No Upfront      standard   \n",
-       "4        Memory optimized                    1  Partial Upfront   convertible   \n",
+       "0        Memory_optimized                    3  Partial Upfront      standard   \n",
+       "1        Memory_optimized                    1       No Upfront      standard   \n",
+       "2        Memory_optimized                    1       No Upfront   convertible   \n",
+       "3        Memory_optimized                    3       No Upfront      standard   \n",
+       "4        Memory_optimized                    1  Partial Upfront   convertible   \n",
        "...                   ...                  ...              ...           ...   \n",
-       "570338  Compute optimized                    3       No Upfront      standard   \n",
-       "570339  Compute optimized                    1  Partial Upfront   convertible   \n",
-       "570340  Compute optimized                    1  Partial Upfront      standard   \n",
-       "570341  Compute optimized                    3  Partial Upfront   convertible   \n",
-       "570342  Compute optimized                    3       No Upfront   convertible   \n",
+       "570338  Compute_optimized                    3       No Upfront      standard   \n",
+       "570339  Compute_optimized                    1  Partial Upfront   convertible   \n",
+       "570340  Compute_optimized                    1  Partial Upfront      standard   \n",
+       "570341  Compute_optimized                    3  Partial Upfront   convertible   \n",
+       "570342  Compute_optimized                    3       No Upfront   convertible   \n",
        "\n",
        "          Product Family  ... Memory    Tenancy  \\\n",
        "0       Compute Instance  ...      8  Dedicated   \n",
@@ -649,7 +643,7 @@
        "[554079 rows x 23 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
