--- a/04_predictions.ipynb
+++ b/04_predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 196,
    "metadata": {
     "tags": []
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -41,24 +41,24 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 7 entries, 0 to 6\n",
+      "RangeIndex: 10 entries, 0 to 9\n",
       "Data columns (total 12 columns):\n",
       " #   Column               Non-Null Count  Dtype  \n",
       "---  ------               --------------  -----  \n",
-      " 0   YearQuarter          7 non-null      object \n",
-      " 1   PricePerUnit         7 non-null      float64\n",
-      " 2   LeaseContractLength  7 non-null      float64\n",
-      " 3   PurchaseOption       7 non-null      object \n",
-      " 4   vCPU                 7 non-null      float64\n",
-      " 5   DiskType             7 non-null      object \n",
-      " 6   operatingSystem      7 non-null      object \n",
-      " 7   Memory               7 non-null      float64\n",
-      " 8   networkPerformance   7 non-null      float64\n",
-      " 9   StorageSize          7 non-null      float64\n",
-      " 10  Quarter              7 non-null      float64\n",
-      " 11  year                 7 non-null      int64  \n",
+      " 0   YearQuarter          10 non-null     object \n",
+      " 1   PricePerUnit         10 non-null     float64\n",
+      " 2   LeaseContractLength  10 non-null     float64\n",
+      " 3   PurchaseOption       10 non-null     object \n",
+      " 4   vCPU                 10 non-null     float64\n",
+      " 5   DiskType             10 non-null     object \n",
+      " 6   operatingSystem      10 non-null     object \n",
+      " 7   Memory               10 non-null     float64\n",
+      " 8   networkPerformance   10 non-null     float64\n",
+      " 9   StorageSize          10 non-null     float64\n",
+      " 10  Quarter              10 non-null     float64\n",
+      " 11  year                 10 non-null     int64  \n",
       "dtypes: float64(7), int64(1), object(4)\n",
-      "memory usage: 800.0+ bytes\n"
+      "memory usage: 1.1+ KB\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,15 +151,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
     "# RUN_ID = input(\"Enter the model RUN ID you want to use: \")\n",
     "path1 = \"file:///media/gfragi/data/BarraCuda/mlruns/mlruns\"\n",
     "path2 = \"artifacts/catboost_model\"\n",
-    "\n",
-    "logged_model = f\"{path1}/653123571387861752/c835ef59ac05466088c96fd0bd725a0e/{path2}\"\n",
+    "# g4dn.12xlarge_Windows_Partial Upfront.csv\n",
+    "logged_model = f\"{path1}/977346654452183974/9fa9c1ec775a46bcb670cb8aac6d321b/{path2}\"\n",
     "\n",
     "# Load model as a PyFuncModel.\n",
     "loaded_model = mlflow.pyfunc.load_model(logged_model)"
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,192 +187,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 204,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "application/vnd.plotly.v1+json": {
-       "config": {
-        "plotlyServerURL": "https://plot.ly"
-       },
-       "data": [
-        {
-         "mode": "lines+markers",
-         "name": "Actual",
-         "type": "scatter",
-         "x": [
-          "2022Q2",
-          "2022Q3",
-          "2022Q4"
-         ],
-         "y": [
-          2.12648375,
-          2.28788875,
-          2.245702083333333
-         ]
-        },
-        {
-         "mode": "lines+markers",
-         "name": "Predicted",
-         "type": "scatter",
-         "x": [
-          "2022Q2",
-          "2022Q3",
-          "2022Q4",
-          "2023Q1",
-          "2023Q2",
-          "2023Q3",
-          "2023Q4"
-         ],
-         "y": [
-          2.2755618263849007,
-          2.284740108868582,
-          2.2182386664211498,
-          2.2182386664211498,
-          2.2182386664211498,
-          2.2182386664211498,
-          2.2182386664211498
-         ]
-        }
-       ],
-       "layout": {
-        "template": {
-         "data": {
-          "pie": [
-           {
-            "automargin": true,
-            "type": "pie"
-           }
-          ],
-          "scatter": [
-           {
-            "line": {
-             "width": 3
-            },
-            "marker": {
-             "size": 9
-            },
-            "type": "scatter"
-           }
-          ],
-          "scatter3d": [
-           {
-            "line": {
-             "width": 3
-            },
-            "marker": {
-             "size": 9
-            },
-            "type": "scatter3d"
-           }
-          ],
-          "scattergeo": [
-           {
-            "line": {
-             "width": 3
-            },
-            "marker": {
-             "size": 9
-            },
-            "type": "scattergeo"
-           }
-          ],
-          "scattergl": [
-           {
-            "line": {
-             "width": 3
-            },
-            "marker": {
-             "size": 9
-            },
-            "type": "scattergl"
-           }
-          ],
-          "scatterpolar": [
-           {
-            "line": {
-             "width": 3
-            },
-            "marker": {
-             "size": 9
-            },
-            "type": "scatterpolar"
-           }
-          ],
-          "scatterpolargl": [
-           {
-            "line": {
-             "width": 3
-            },
-            "marker": {
-             "size": 9
-            },
-            "type": "scatterpolargl"
-           }
-          ],
-          "scatterternary": [
-           {
-            "line": {
-             "width": 3
-            },
-            "marker": {
-             "size": 9
-            },
-            "type": "scatterternary"
-           }
-          ],
-          "table": [
-           {
-            "cells": {
-             "height": 30
-            },
-            "header": {
-             "height": 36
-            },
-            "type": "table"
-           }
-          ]
-         },
-         "layout": {
-          "font": {
-           "size": 18
-          },
-          "xaxis": {
-           "title": {
-            "standoff": 15
-           }
-          },
-          "yaxis": {
-           "title": {
-            "standoff": 15
-           }
-          }
-         }
-        },
-        "title": {
-         "text": "Actual vs. Predicted Prices for r6id.4xlarge"
-        },
-        "xaxis": {
-         "title": {
-          "text": "Year Quarter"
-         }
-        },
-        "yaxis": {
-         "title": {
-          "text": "Price"
-         }
-        }
-       }
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening in existing browser session.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/snap/core20/current/lib/x86_64-linux-gnu/libstdc++.so.6: version `GLIBCXX_3.4.29' not found (required by /lib/x86_64-linux-gnu/libproxy.so.1)\n",
+      "Failed to load module: /home/gfragi/snap/code/common/.cache/gio-modules/libgiolibproxy.so\n",
+      "Gtk-Message: 06:46:11.678: Failed to load module \"canberra-gtk-module\"\n",
+      "Gtk-Message: 06:46:11.678: Failed to load module \"canberra-gtk-module\"\n"
+     ]
     }
    ],
    "source": [
+    "import plotly.io as pio\n",
+    "\n",
+    "pio.renderers.default = \"browser\"\n",
+    "\n",
     "# Create a line plot using Plotly\n",
     "fig = go.Figure()\n",
     "fig.add_trace(go.Scatter(x=actual_prices.index,\n",
@@ -399,21 +241,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
      "ename": "ValueError",
-     "evalue": "Found input variables with inconsistent numbers of samples: [3, 7]",
+     "evalue": "Found input variables with inconsistent numbers of samples: [6, 10]",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[156], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m \u001b[39mimport\u001b[39;00m mean_squared_error, mean_absolute_error, r2_score, mean_absolute_percentage_error\n\u001b[0;32m----> 4\u001b[0m mse \u001b[39m=\u001b[39m mean_squared_error(actual_prices, predictions)\n\u001b[1;32m      5\u001b[0m rmse \u001b[39m=\u001b[39m mean_squared_error(actual_prices, predictions, squared\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m      6\u001b[0m mae \u001b[39m=\u001b[39m mean_absolute_error(actual_prices, predictions)\n",
+      "Cell \u001b[0;32mIn[205], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m \u001b[39mimport\u001b[39;00m mean_squared_error, mean_absolute_error, r2_score, mean_absolute_percentage_error\n\u001b[0;32m----> 4\u001b[0m mse \u001b[39m=\u001b[39m mean_squared_error(actual_prices, predictions)\n\u001b[1;32m      5\u001b[0m rmse \u001b[39m=\u001b[39m mean_squared_error(actual_prices, predictions, squared\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m      6\u001b[0m mae \u001b[39m=\u001b[39m mean_absolute_error(actual_prices, predictions)\n",
       "File \u001b[0;32m~/Phd_projects/PriceIndex/price39_env/lib/python3.9/site-packages/sklearn/metrics/_regression.py:442\u001b[0m, in \u001b[0;36mmean_squared_error\u001b[0;34m(y_true, y_pred, sample_weight, multioutput, squared)\u001b[0m\n\u001b[1;32m    382\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmean_squared_error\u001b[39m(\n\u001b[1;32m    383\u001b[0m     y_true, y_pred, \u001b[39m*\u001b[39m, sample_weight\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, multioutput\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39muniform_average\u001b[39m\u001b[39m\"\u001b[39m, squared\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    384\u001b[0m ):\n\u001b[1;32m    385\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Mean squared error regression loss.\u001b[39;00m\n\u001b[1;32m    386\u001b[0m \n\u001b[1;32m    387\u001b[0m \u001b[39m    Read more in the :ref:`User Guide <mean_squared_error>`.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    440\u001b[0m \u001b[39m    0.825...\u001b[39;00m\n\u001b[1;32m    441\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 442\u001b[0m     y_type, y_true, y_pred, multioutput \u001b[39m=\u001b[39m _check_reg_targets(\n\u001b[1;32m    443\u001b[0m         y_true, y_pred, multioutput\n\u001b[1;32m    444\u001b[0m     )\n\u001b[1;32m    445\u001b[0m     check_consistent_length(y_true, y_pred, sample_weight)\n\u001b[1;32m    446\u001b[0m     output_errors \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39maverage((y_true \u001b[39m-\u001b[39m y_pred) \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m \u001b[39m2\u001b[39m, axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, weights\u001b[39m=\u001b[39msample_weight)\n",
       "File \u001b[0;32m~/Phd_projects/PriceIndex/price39_env/lib/python3.9/site-packages/sklearn/metrics/_regression.py:100\u001b[0m, in \u001b[0;36m_check_reg_targets\u001b[0;34m(y_true, y_pred, multioutput, dtype)\u001b[0m\n\u001b[1;32m     66\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_check_reg_targets\u001b[39m(y_true, y_pred, multioutput, dtype\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mnumeric\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m     67\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Check that y_true and y_pred belong to the same regression task.\u001b[39;00m\n\u001b[1;32m     68\u001b[0m \n\u001b[1;32m     69\u001b[0m \u001b[39m    Parameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     98\u001b[0m \u001b[39m        correct keyword.\u001b[39;00m\n\u001b[1;32m     99\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 100\u001b[0m     check_consistent_length(y_true, y_pred)\n\u001b[1;32m    101\u001b[0m     y_true \u001b[39m=\u001b[39m check_array(y_true, ensure_2d\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, dtype\u001b[39m=\u001b[39mdtype)\n\u001b[1;32m    102\u001b[0m     y_pred \u001b[39m=\u001b[39m check_array(y_pred, ensure_2d\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, dtype\u001b[39m=\u001b[39mdtype)\n",
       "File \u001b[0;32m~/Phd_projects/PriceIndex/price39_env/lib/python3.9/site-packages/sklearn/utils/validation.py:397\u001b[0m, in \u001b[0;36mcheck_consistent_length\u001b[0;34m(*arrays)\u001b[0m\n\u001b[1;32m    395\u001b[0m uniques \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39munique(lengths)\n\u001b[1;32m    396\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(uniques) \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m--> 397\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    398\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mFound input variables with inconsistent numbers of samples: \u001b[39m\u001b[39m%r\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m    399\u001b[0m         \u001b[39m%\u001b[39m [\u001b[39mint\u001b[39m(l) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m lengths]\n\u001b[1;32m    400\u001b[0m     )\n",
-      "\u001b[0;31mValueError\u001b[0m: Found input variables with inconsistent numbers of samples: [3, 7]"
+      "\u001b[0;31mValueError\u001b[0m: Found input variables with inconsistent numbers of samples: [6, 10]"
      ]
     }
    ],
@@ -437,11 +279,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 0.0157982203922022\n",
-      "RMSE: 0.1256909718006914\n",
-      "MAE: 0.12551738112353486\n",
-      "MAPE: 0.2429372093051005\n",
-      "R-squared: -6.832856688179667\n"
+      "MSE: 34.64502444447058\n",
+      "RMSE: 5.886002416281409\n",
+      "MAE: 5.880372817441975\n",
+      "MAPE: 0.6569875914834162\n",
+      "R-squared: -410.89957652977847\n"
      ]
     }
    ],
